--- a/tuning/config.toml
+++ b/tuning/config.toml
@@ -104,6 +104,13 @@ path = "{{ home_dir }}/.config/nvim/coc-settings.json"
 type = "file"
 state= "link"
 force = true
+src = "{{ home_dir }}/.dotfiles/.config/nvim/lazy-lock.json"
+path = "{{ home_dir }}/.config/nvim/lazy-lock.json"
+
+[[jobs]]
+type = "file"
+state= "link"
+force = true
 src = "{{ home_dir }}/.dotfiles/.config/coc/ultisnips/markdown.snippets"
 path = "{{ home_dir }}/.config/coc/ultisnips/markdown.snippets"
 
