add dotnet support

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -207,6 +207,15 @@
           }
         }
       }
+    },
+    "csharp-ls": {
+      "command": "csharp-ls",
+      "filetypes": [
+        "cs"
+      ],
+      "rootPatterns": [
+        "*.csproj",
+      ]
     }
   }
 }
