--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -1,3 +1,4 @@
+This is not used anymore, but not all customization is configured/present in the lsp config yet
 {
   "java.import.gradle.enabled": true,
   "java.import.maven.enabled": true,
