--- a/tuning/config.toml
+++ b/tuning/config.toml
@@ -111,6 +111,13 @@ path = "{{ home_dir }}/.config/nvim/lazy-lock.json"
 type = "file"
 state= "link"
 force = true
+src = "{{ home_dir }}/.dotfiles/.config/nvim/mason-lock.json"
+path = "{{ home_dir }}/.config/nvim/mason-lock.json"
+
+[[jobs]]
+type = "file"
+state= "link"
+force = true
 src = "{{ home_dir }}/.dotfiles/.config/ranger/rc.conf"
 path = "{{ home_dir }}/.config/ranger/rc.conf"
 
