remove vscode-test from ripgrep fuzzy searching

--- a/.ripgreprc
+++ b/.ripgreprc
@@ -3,11 +3,10 @@
 --smart-case
 
 # exclude specific directories
---glob=!**/{node_modules}/*
 --glob=!**/.{git,svn,bzr,hg,pc,dep,dot,nib,plst,*cache}/*
 --glob=!**/.{conan,clangd}/*
 --glob=!**/{python-build,__pycache__,site-packages}/*
---glob=!**/{node_modules}/*
+--glob=!**/{node_modules,.vscode-test}/*
 
 # exclude specific filetypes
 --glob=!**/*.{o,so,jar,ser}
