--- a/.config/mise/config.toml
+++ b/.config/mise/config.toml
@@ -2,15 +2,15 @@
 go = "1.23.4"
 node = "22.8.0"
 java = "adoptopenjdk-21.0.4+7.0.LTS"
-awscli = "2.18.5"
-direnv = "2.34.0"
+awscli = "2.22.14"
+direnv = "2.35.0"
 lazygit = "0.44.1"
 github-cli = "2.58.0"
 usage = "1.3.4"
 maven = "3.9.9"
 gradle = "8.9"
 yq = "4.44.3"
-eza = "0.20.10"
+eza = "0.20.11"
 kotlin = "2.1.0"
 dotnet = "8.0.401"
 trivy = "0.56.2"
@@ -19,3 +19,4 @@ flutter = "3.24.5-stable"
 dart = "3.5.4"
 ktlint = "1.5.0"
 git = "2.47.1"
+cmake = "3.31.2"
