--- a/.config/mise/config.toml
+++ b/.config/mise/config.toml
@@ -1,22 +1,22 @@
 [tools]
 go = "1.23.4"
-node = "22.8.0"
-java = "adoptopenjdk-21.0.4+7.0.LTS"
-awscli = "2.22.14"
+node = "23.4.0"
+java = "adoptopenjdk-23.0.1"
+awscli = "2.22.17"
 direnv = "2.35.0"
 lazygit = "0.44.1"
-github-cli = "2.58.0"
-usage = "1.3.4"
+github-cli = "2.63.2"
+usage = "1.5.3"
 maven = "3.9.9"
-gradle = "8.9"
-yq = "4.44.3"
-eza = "0.20.11"
+gradle = "8.11"
+yq = "4.44.6"
+eza = "0.20.12"
 kotlin = "2.1.0"
-dotnet = "8.0.401"
-trivy = "0.56.2"
+dotnet = "9.0.101"
+trivy = "0.58.0"
 neovim = "0.10.2"
-flutter = "3.24.5-stable"
-dart = "3.5.4"
+flutter = "3.27.0-stable"
+dart = "3.6.0"
 ktlint = "1.5.0"
 git = "2.47.1"
 cmake = "3.31.2"
