--- a/.config/mise/config.toml
+++ b/.config/mise/config.toml
@@ -1,30 +1,28 @@
 [tools]
 go = "1.23.5"
-node = "23.6.1"
-java = "adoptopenjdk-23.0.1"
-awscli = "2.23.6"
+node = "23.7.0"
+java = "adoptopenjdk-23.0.2"
+awscli = "2.23.11"
 direnv = "2.35.0"
 lazygit = "0.45.2"
-github-cli = "2.65.0"
+github-cli = "2.66.1"
 usage = "2.0.3"
 maven = "3.9.9"
 yq = "4.45.1"
-eza = "0.20.18"
-kotlin = "2.1.0"
+eza = "0.20.19"
+kotlin = "2.0.21"
 dotnet = "9.0.102"
-trivy = "0.58.2"
-neovim = "0.10.3"
+trivy = "0.59.0"
+neovim = "0.10.4"
 flutter = "3.27.3-stable"
 dart = "3.6.1"
 ktlint = "1.5.0"
-git = "2.48.1"
 cmake = "3.31.5"
 gradle = "8.12"
 
 [settings]
-fetch_remote_versions_cache = "0s"
+fetch_remote_versions_cache = "365d"
 always_keep_download = true
 always_keep_install = true
-http_timeout = "10s"
-plugin_autoupdate_last_check_duration = "0s"
+plugin_autoupdate_last_check_duration = "365d"
 quiet = true
