--- a/.config/mise/config.toml
+++ b/.config/mise/config.toml
@@ -10,13 +10,13 @@ usage = "2.0.3"
 maven = "3.9.9"
 yq = "4.45.1"
 eza = "0.20.19"
-kotlin = "2.0.21"
+kotlin = "2.1.20-Beta2"
 dotnet = "9.0.102"
 trivy = "0.59.0"
 neovim = "0.10.4"
 flutter = "3.27.3-stable"
-dart = "3.6.1"
-ktlint = "1.5.0"
+dart = "3.6.2"
+ktlint = "1.4.0"
 cmake = "3.31.5"
 gradle = "8.12"
 
