fix uv installation

--- a/tuning/programs.toml
+++ b/tuning/programs.toml
@@ -209,7 +209,7 @@ when = "{{ not has_executable(exe='git-credential-libsecret') }}"
 [[jobs]]
 name = "install others"
 type = "command"
-command "bash"
+command = "bash"
 argv = [
   "-c",
   '''\
