--- a/.config/mise/config.toml
+++ b/.config/mise/config.toml
@@ -1,10 +1,10 @@
 [tools]
 go = "1.24.0"
-node = "23.8.0"
-java = "adoptopenjdk-22.0.2+9"
-awscli = "2.24.10"
+node = "23.9.0"
+java = "adoptopenjdk-23.0.2"
+awscli = "2.24.12"
 direnv = "2.35.0"
-lazygit = "0.47.1"
+lazygit = "0.47.2"
 github-cli = "2.67.0"
 usage = "2.0.5"
 maven = "3.9.9"
@@ -15,10 +15,10 @@ dotnet = "9.0.200"
 trivy = "0.59.1"
 neovim = "0.10.4"
 flutter = "3.29.0-stable"
-dart = "3.7.0"
+dart = "3.7.1"
 ktlint = "1.5.0"
-cmake = "3.31.5"
-gradle = "8.12.1"
+cmake = "3.31.6"
+gradle = "8.13"
 
 [settings]
 fetch_remote_versions_cache = "365d"
