--- a/tuning/programs.toml
+++ b/tuning/programs.toml
@@ -87,6 +87,7 @@ packages = [
   "github.com/Gelio/go-global-update",
   "github.com/google/yamlfmt/cmd/yamlfmt",
   "github.com/jesseduffield/lazydocker",
+  "github.com/bazelbuild/bazelisk",
   "gitlab.com/gitlab-org/cli/cmd/glab",
   "golang.org/x/lint/golint",
   "golang.org/x/tools/cmd/goimports",
