--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -44,7 +44,7 @@ set confirm_on_delete multiple
 # Use non-default path for file preview script?
 # ranger ships with scope.sh, a script that calls external programs (see
 # README.md for dependencies) to preview images, archives, etc.
-#set preview_script ~/.config/ranger/scope.sh
+set preview_script ~/.dotfiles/.config/ranger/scope.sh
 
 # Use the external preview script or display simple plain text or image previews?
 set use_preview_script true
@@ -71,7 +71,7 @@ set vcs_backend_svn disabled
 set vcs_msg_length 50
 
 # Use one of the supported image preview protocols
-set preview_images true
+set preview_images false
 
 # Set the preview image method. Supported methods:
 #
@@ -114,7 +114,7 @@ set preview_images true
 #   Preview images in full color with the external command "ueberzug".
 #   Images are shown by using a child window.
 #   Only for users who run X11 in GNU/Linux.
-set preview_images_method ueberzug
+# set preview_images_method ueberzug
 
 # Delay in seconds before displaying an image with the w3m method.
 # Increase it in case of experiencing display corruption.
