--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -42,7 +42,9 @@ regular4=   268bd2
 regular5=   d33682
 regular6=   2aa198
 regular7=   eee8d5
-bright0=    002b36
+
+# Improved hue of bright0: original is 002b36 (= background), which is unreadable in front of the background
+bright0=    2d5b69
 bright1=    cb4b16
 bright2=    586e75
 bright3=    657b83
