--- a/.config/mise/config.toml
+++ b/.config/mise/config.toml
@@ -1,24 +1,24 @@
 [tools]
-go = "1.24.2"
-node = "23.11.0"
+go = "1.24.3"
+node = "24.0.2"
 java = "adoptopenjdk-24.0.1+9"
-awscli = "2.27.1"
+awscli = "2.27.15"
 direnv = "2.36.0"
-lazygit = "0.49.0"
-github-cli = "2.71.2"
-usage = "2.0.7"
+lazygit = "0.50.0"
+github-cli = "2.72.0"
+usage = "2.1.1"
 maven = "3.9.9"
-yq = "4.45.1"
-eza = "0.21.2"
-kotlin = "2.1.20-Beta2"
-dotnet = "9.0.203"
-trivy = "0.61.1"
+yq = "4.45.4"
+eza = "0.21.3"
+kotlin = "2.1.21"
+dotnet = "9.0.300"
+trivy = "0.62.1"
 neovim = "0.11.1"
 flutter = "3.29.3-stable"
 dart = "3.7.3"
 ktlint = "1.5.0"
-cmake = "4.0.1"
-gradle = "8.13"
+cmake = "4.0.2"
+gradle = "8.14"
 
 [settings]
 fetch_remote_versions_cache = "365d"
