--- a/.config/yazi/keymap.toml
+++ b/.config/yazi/keymap.toml
@@ -7,6 +7,8 @@
 keymap = [
     { on = "<C-d>", run = 'shell -- dragon -x -T "$@"', desc = "Hand over to dragon for drag and drop" },
 
+    { on = "C", run = "plugin ouch",            desc = "Compress with ouch" },
+
 	{ on = "<Esc>", run = "escape",             desc = "Exit visual mode, clear selection, or cancel search" },
 	{ on = "<C-[>", run = "escape",             desc = "Exit visual mode, clear selection, or cancel search" },
 	{ on = "q",     run = "quit",               desc = "Quit the process" },
