add nvim (lazy) repo directory to github-specific git config

--- a/.gitconfig
+++ b/.gitconfig
@@ -56,3 +56,5 @@
   path = ~/.dotfiles/.gitconfig.github
 [includeIf "gitdir:~/go/*"]
   path = ~/.dotfiles/.gitconfig.github
+[includeIf "gitdir:~/.local/share/nvim/*"]
+  path = ~/.dotfiles/.gitconfig.github
