--- a/.config/yazi/keymap.toml
+++ b/.config/yazi/keymap.toml
@@ -2,7 +2,7 @@
 # If you encounter any issues, please make an issue at https://github.com/yazi-rs/schemas.
 "$schema" = "https://yazi-rs.github.io/schemas/keymap.json"
 
-[manager]
+[mgr]
 
 keymap = [
     { on = "<C-d>", run = 'shell -- dragon -x -T "$@"', desc = "Hand over to dragon for drag and drop" },
