smart splits, integrating tmux with nvim

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,10 +13,25 @@ set -g @plugin 'jimeh/tmux-themepack'
 set -g @plugin 'jaclu/tmux-menus'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
+set -g @plugin 'mrjones2014/smart-splits.nvim'
+
+
 # Configuration
 set -g @themepack 'powerline/double/blue'
 
 set -g mouse on
+
+set -g @smart-splits_move_left_key  'C-h' # key-mapping for navigation.
+set -g @smart-splits_move_down_key  'C-j' #  --"--
+set -g @smart-splits_move_up_key    'C-k' #  --"--
+set -g @smart-splits_move_right_key 'C-l' #  --"--
+
+set -g @smart-splits_resize_left_key  'A-h' # key-mapping for resizing.
+set -g @smart-splits_resize_down_key  'A-j' #  --"--
+set -g @smart-splits_resize_up_key    'A-k' #  --"--
+set -g @smart-splits_resize_right_key 'A-l' #  --"--
+
+set -g @smart-splits_resize_step_size '3' # change the step-size for resizing.
 
 # address vim mode switching delay (http://superuser.com/a/252717/65504)
 set -s escape-time 0
