--- a/.config/systemd/user/xsettingsd.service
+++ b/.config/systemd/user/xsettingsd.service
@@ -4,8 +4,9 @@ BindsTo=sway-session.target
 
 [Service]
 Type=simple
-ExecStart=/bin/bash -c 'xsettingsd'
+ExecStart=-/bin/bash -c 'xsettingsd'
 Restart=on-failure
+RestartSec=5s
 
 [Install]
 WantedBy=sway-session.target
