add new screen configuration

--- a/.config/kanshi/work.config
+++ b/.config/kanshi/work.config
@@ -12,6 +12,11 @@ profile dual-2 {
     output HDMI-A-1 enable position 0,0
 }
 
+profile dual-8 {
+    output eDP-1 enable position 3440,240
+    output DP-8 enable position 0,0
+}
+
 profile man-dual {
     output DP-1 enable position 0,0 mode 2560x1440
     output DP-2 enable position 2560,0 mode 2560x1440
