--- a/tuning/config.toml
+++ b/tuning/config.toml
@@ -294,6 +294,13 @@ path = "{{ home_dir }}/.config/Kvantum/Solarized-Dark"
 type = "file"
 state= "link"
 force = true
+src = "{{ home_dir }}/.dotfiles/.config/opencode/opencode.jsonc"
+path = "{{ home_dir }}/.config/opencode/opencode.jsonc"
+
+[[jobs]]
+type = "file"
+state= "link"
+force = true
 src = "{{ home_dir }}/.dotfiles/.gtkrc-2.0"
 path = "{{ home_dir }}/.gtkrc-2.0"
 
