--- a/.config/opencode/opencode.jsonc
+++ b/.config/opencode/opencode.jsonc
@@ -1,7 +1,7 @@
 {
   "$schema": "https://opencode.ai/config.json",
   // Theme configuration
-  "theme": "opencode",
+  "theme": "solarized",
   "provider": {
     "ollama": {
       "npm": "@ai-sdk/openai-compatible",
