--- a/tuning/config.toml
+++ b/tuning/config.toml
@@ -167,6 +167,13 @@ path = "{{ home_dir }}/.config/xdg-desktop-portal-wlr/config"
 type = "file"
 state= "link"
 force = true
+src = "{{ home_dir }}/.dotfiles/.config/xdg-desktop-portal/sway-portals.conf"
+path = "{{ home_dir }}/.config/xdg-desktop-portal/sway-portals.conf"
+
+[[jobs]]
+type = "file"
+state= "link"
+force = true
 src = "{{ home_dir }}/.dotfiles/.config/electron-flags.conf"
 path = "{{ home_dir }}/.config/electron-flags.conf"
 
